--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^6.0.0-beta.1"
+    "astro": "workspace:*",
+    "@astrojs/node": "workspace:*"
   }
 }
