fix(cloudflare): workers types

--- a/packages/integrations/cloudflare/tsconfig.json
+++ b/packages/integrations/cloudflare/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "../../../tsconfig.base.json",
   "include": ["src", "virtual.d.ts", "types.d.ts"],
   "compilerOptions": {
-    "outDir": "./dist",
-    "types": ["@cloudflare/workers-types"]
+    "outDir": "./dist"
   }
 }
